@@ -19,12 +19,9 @@
                 <rows>2</rows>
                 <object class="sizeritem">
                   <object class="wxListCtrl" name="lstStatus">
-                    
                     <pos>5,24</pos>
-                    
                     <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
                   </object>
-                  
                   <flag>wxGROW</flag>
                 </object>
                 <growablecols>0</growablecols>
@@ -34,22 +31,16 @@
                     <cols>2</cols>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnCancelSt">
-                        
                         <label>Cancel</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnTerminateSt">
-                        
                         <label>Terminate</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                   </object>
@@ -65,14 +56,10 @@
                 <rows>2</rows>
                 <object class="sizeritem">
                   <object class="wxListCtrl" name="lstLocks">
-                    
                     <pos>5,24</pos>
-                    
                     <size>385,270</size>
-                    
                     <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
                   </object>
-                  
                   <flag>wxGROW</flag>
                 </object>
                 <growablecols>0</growablecols>
@@ -82,22 +69,16 @@
                     <cols>2</cols>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnCancelLk">
-                        
                         <label>Cancel</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnTerminateLk">
-                        
                         <label>Terminate</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                   </object>
@@ -113,14 +94,10 @@
                 <rows>2</rows>
                 <object class="sizeritem">
                   <object class="wxListCtrl" name="lstXacts">
-                    
                     <pos>5,24</pos>
-                    
                     <size>385,270</size>
-                    
                     <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
                   </object>
-                  
                   <flag>wxGROW</flag>
                 </object>
                 <growablecols>0</growablecols>
@@ -130,22 +107,16 @@
                     <cols>2</cols>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnCommit">
-                        
                         <label>Commit</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnRollback">
-                        
                         <label>Rollback</label>
                       </object>
-                      
                       <flag>wxALL|wxALIGN_CENTRE|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                   </object>
@@ -161,14 +132,10 @@
                 <rows>2</rows>
                 <object class="sizeritem">
                   <object class="wxListCtrl" name="lstLog">
-                    
                     <size></size>
-                    
                     <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
                   </object>
-                  
                   <flag>wxGROW</flag>
-                  
                   <border>0</border>
                 </object>
                 <growablecols>0</growablecols>
@@ -177,26 +144,18 @@
                     <cols>2</cols>
                     <object class="sizeritem">
                       <object class="wxComboBox" name="cbLogfiles">
-                        
                         <content/>
-                        
                         <size>120,12d</size>
-                        
                         <style>wxCB_READONLY|wxCB_DROPDOWN</style>
                       </object>
-                      
                       <flag>wxRIGHT|wxALIGN_CENTRE_VERTICAL</flag>
-                      
                       <border>5</border>
                     </object>
                     <object class="sizeritem">
                       <object class="wxButton" name="btnRotateLog">
-                        
                         <label>Rotate</label>
                       </object>
-                      
                       <flag>wxALL</flag>
-                      
                       <border>5</border>
                     </object>
                   </object>
@@ -206,90 +165,74 @@
             </object>
           </object>
         </object>
-        
         <flag>wxTOP|wxBOTTOM|wxLEFT|wxRIGHT|wxEXPAND|wxGROW|wxALIGN_CENTRE</flag>
-        
         <border>2</border>
       </object>
       <object class="sizeritem">
         <object class="wxFlexGridSizer">
-          <cols>5</cols>
+          <cols>6</cols>
           <rows>1</rows>
           <object class="sizeritem">
-            <object class="wxStaticText" name="stRate">
-              
-              <label>Refresh rate (seconds)</label>
-              
+            <object class="wxStaticText" name="stRateLabel">
+              <label>Refresh rate:</label>
               <pos>5,7d</pos>
             </object>
-            
             <flag>wxLEFT|wxRIGHT|wxALIGN_CENTRE_VERTICAL</flag>
-            
-            <border>5</border>
+            <border>3</border>
           </object>
           <object class="sizeritem">
-            <object class="wxSpinCtrl" name="spnRefreshRate">
-              
+            <object class="wxSlider" name="slRate">
               <value>1</value>
-              
-              <min>0</min>
-              
               <pos>90,6d</pos>
-              
-              <size>33,-1d</size>
+              <size>50,-1d</size>
+              <min>0</min>
+              <max>600</max>
+              <selmin>0</selmin>
+              <selmax>600</selmax>
             </object>
-            
             <flag>wxLEFT|wxALIGN_CENTRE_VERTICAL</flag>
-            
-            <border>5</border>
+            <border>3</border>
+          </object>
+          <object class="sizeritem">
+            <object class="wxStaticText" name="stRate">
+              <label>Stopped</label>
+            </object>
+            <flag>wxLEFT|wxRIGHT|wxALIGN_CENTRE_VERTICAL</flag>
+            <border>3</border>
           </object>
           <object class="sizeritem">
             <object class="wxStaticText">
-              
               <label></label>
             </object>
-            
-            <flag>wxEXPAND|wxGROW|wxALIGN_CENTRE</flag>
+            <flag>wxEXPAND|wxGROW</flag>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_REFRESH">
-              
               <label>Refresh</label>
-              
               <default>1</default>
-              
               <pos>283,4d</pos>
             </object>
-            
             <flag>wxTOP|wxBOTTOM|wxLEFT|wxRIGHT</flag>
-            
             <border>5</border>
           </object>
           <object class="sizeritem">
             <object class="wxButton" name="wxID_CLOSE">
-              
               <label>Close</label>
-              
               <pos>342,4d</pos>
             </object>
-            
             <flag>wxLEFT|wxRIGHT|wxALIGN_CENTRE_VERTICAL</flag>
-            
             <border>3</border>
           </object>
           <growablecols>2</growablecols>
         </object>
-        
         <flag>wxTOP|wxEXPAND|wxGROW</flag>
       </object>
       <growablecols>0</growablecols>
       <growablerows>0</growablerows>
       <object class="sizeritem">
         <object class="unknown" name="unkStatusBar">
-          
           <size>-1,15d</size>
         </object>
-        
         <flag>wxGROW</flag>
       </object>
     </object>
