@@ -19,6 +19,7 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-06-22 DP  1.4.3  Use a slider instead of a spin control to avoid a wxGTK bug on the status form, per Peter Eisentraut.
     <li>2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate [Thomas Sondag]
     <li>2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate permissions to create roles and DBs.
     <li>2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could damage files.
